fix NPE , добавлено логирование